# Rust-webapp-starter

./: .env  .gitignore  Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/migrations/2018-01-04-064431_create_posts/: up.sql
backend/src/: db.rs  handler.rs  main.rs  model.rs  user.rs
backend/src/api/: user.rs
backend/src/handler/: user.rs
backend/src/model/: mod.rs  user.rs
backend/src/utils/: schema.rs
frontend/: package.json
frontend/src/: app.vue
migrations/2018-01-04-064431_create_posts/: down.sql  up.sql
src/: main.rs
src/api/: article.rs  mod.rs  user.rs
src/handler/: auth.rs  func.rs  index.rs  mod.rs  user.rs
src/model/: article.rs  db.rs  mod.rs  pg.rs  r2d2.rs  response.rs  user.rs
src/utils/: cors.rs  error.rs  jwt.rs  mod.rs  schema.rs  token.rs
webapp/: index.html  package-lock.json  package.json
webapp/src/: app.vue  main.js
webapp/src/components/nav/: Mnav.vue
webapp/src/pages/about/: About.vue
webapp/src/pages/article/: Article.vue
webapp/src/pages/home/: Home.vue
webapp/src/pages/more/: More.vue
webapp/src/pages/new/: New.vue
webapp/src/pages/notfound/: NotFound.vue
webapp/src/pages/user/: Access.vue  Center.vue  Centre.vue  SignUp.vue
webapp/src/pages/wiki/: Wiki.vue
webapp/src/router/: index.js
webapp/src/store/: index.js
webapp/src/utils/: auth.js
